[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/settings/settings_button.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/rubik.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/shop/button/select.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.3 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="SettingsButton" type="Button"]
margin_right = 324.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "#SOUNDS"
script = ExtResource( 1 )

[node name="InfoPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 352.0
margin_right = 188.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "OPEN"
align = 1
valign = 1

[node name="FocusPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
bus = "Sounds"
